# iso9506-mms

./: .envrc  .gitignore  CONTRIBUTORS.md  Cargo.toml  LICENSE  NOTICE  README.md  build.rs  devenv.nix  rustfmt.toml
.github/: CODEOWNERS
.github/workflows/: ci.yaml  conventional-commits.yaml
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/corpus/floating-point-decode/: float32.seed  float64.seed
fuzz/corpus/protocol-decode/: identify-request.seed  identify-response.seed  initiate-request.seed  initiate-response.seed
fuzz/corpus/protocol-full-ingress/: cc.seed  cr.seed  dt.seed  dt2.seed
fuzz/corpus/time-of-day-decode/: timedate.seed
fuzz/fuzz_targets/: floating-point-decode.rs  protocol-decode.rs  protocol-full-ingress.rs  time-of-day-decode.rs
patches/: 10-messages-recursive-struct-fix.patch
schema/: ISO-8650-ACSE-1.asn  ISO-8823-PRESENTATION.asn  ISO-9506-MMS-1.asn  ISO-9506-MMS-1A.asn  ISO-9506-MMS-Environment-1.asn  ISO-9506-MMS-Object-Module-1.asn  README.md
src/: client.rs  error.rs  lib.rs  oid.rs  protocol.rs
src/cli/: main.rs
src/client/: variable_access.rs  vmd_support.rs
src/protocol/: acse.rs  mms.rs  presentation.rs  session.rs  tpkt.rs  transport.rs
