[package]
name = "mms"
version.workspace = true
edition.workspace = true
publish.workspace = true

[[bin]]
name = "mms-client"
path = "src/cli/main.rs"

[dependencies]
bitvec.workspace = true
bytes.workspace = true
chrono.workspace = true
clap.workspace = true
env_logger.workspace = true
futures.workspace = true
lazy_static.workspace = true
log.workspace = true
num_enum.workspace = true
rand.workspace = true
rasn.workspace = true
rustls-pemfile.workspace = true
rustls-pki-types.workspace = true
rustls-platform-verifier.workspace = true
rustls.workspace = true
thiserror.workspace = true
tokio-rustls.workspace = true
tokio-util.workspace = true
tokio.workspace = true

[dev-dependencies]
hex.workspace = true

[build-dependencies]
rasn-compiler.workspace = true
