[workspace]
# Exclude from parent workspace

[package]
name = "mms-fuzz"
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4.9"
bytes = "1.10.1"
tokio = { version = "1.43.0", features = ["rt"] }
tokio-util = "0.7.13"
futures = "0.3.31"
mms = { path = ".." }

[[bin]]
name = "protocol-decode"
path = "fuzz_targets/protocol-decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "protocol-full-ingress"
path = "fuzz_targets/protocol-full-ingress.rs"
test = false
doc = false
bench = false
